fix: update line-height in pre and code elements for improved readability

--- a/assets/scss/_style.scss
+++ b/assets/scss/_style.scss
@@ -291,7 +291,7 @@ pre
   background-color:#F6F6F6;
   margin-top: 1em;
   margin-bottom: 1em;
-  line-height: 100%;
+  line-height: 1.4;
 }
 
 code
@@ -304,7 +304,7 @@ pre code
 {
   font-size: 11pt;
   color:#333 !important;
-  line-height: 100%;
+  line-height: 1.4;
 }
 
 pre code:before,
